--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "request": "^2.85.0"
+    "prom-client": "^11.0.0",
+    "request": "^2.85.0",
+    "requestretry": "^1.13.0",
+    "rocky": "^0.4.15"
   }
 }
